<resources>
    <string name="app_name">Let\'s Drink!</string>

    <!--Titles-->
    <string name="title_home">Home</string>
    <string name="title_categories">Categorie</string>
    <string name="title_shaker">Shaker</string>
    <string name="title_favorites">Preferiti</string>
    <string name="title_profile">Profilo</string>
    <string name="title_search">Cerca</string>
    <string name="title_setting">Impostazioni</string>
    <string name="title_filter">Filtri</string>
    <string name="title_custom_drink">Cocktail personalizzato</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registrazione</string>

    <!--Cocktail-->
    <string name="ricerca_cocktail">Cerca Cocktail…</string>
    <string name="cerca_il_cocktail_per_ingredienti">Cerca il cocktail per ingredienti</string>
    <string name="ananas">Ananas</string>
    <string name="arancia_filter">Arancia</string>
    <string name="cognac_filter">Cognac</string>
    <string name="gin_filter">Gin</string>
    <string name="lime">Lime</string>
    <string name="menta">Menta</string>
    <string name="pesca_filter">Pesca</string>
    <string name="rum">Rum</string>
    <string name="soda_filter">Soda</string>
    <string name="vodka_filter">Vodka</string>
    <string name="value_description_icon">icona</string>
    <string name="no_preferiti">Non hai ancora salvato dei preferiti!</string>
    <string name="no_accesso">Non hai ancora effettuato l\'accesso!</string>

    <!--Detail cocktail-->
    <string name="value_ingredients">Ingredienti</string>
    <string name="value_method">Procedimento</string>
    <string name="value_description_image">Immagine drink</string>

    <!--Shaker-->
    <string name="shaker_string">Scuoti il telefono e ottieni un cocktail</string>

    <!--Login and Registration-->
    <string name="lets_drink_logo">logo</string>
    <string name="header_registration_caps_lock">REGISTRAZIONE</string>
    <string name="header_login_caps_lock">LOGIN</string>
    <string name="subtitle_registration">Inserisci i tuoi dati</string>
    <string name="subtitle_login">Accedi per continuare</string>
    <string name="data_user_name">Nome Utente</string>
    <string name="data_age">Età</string>
    <string name="data_email">Email</string>
    <string name="data_password">Password</string>
    <string name="data_confirm_password">Conferma Password</string>
    <string name="value_sign_up">Registrati</string>
    <string name="value_sign_in">Accedi</string>
    <string name="value_remember_me">Ricordami</string>
    <string name="value_forgot_password">Password dimenticata?</string>
    <string name="value_or">oppure</string>
    <string name="value_sign_up_with_google">Continua con Google</string>
    <string name="value_registration_question">Sei già registrato?</string>
    <string name="value_login_question">Non hai un profilo?</string>

    <!--Errors in Registration and Login-->
    <string name="error_user_name">Nome Utente inserito non valido.</string>
    <string name="error_age">Età inserita non valida.</string>
    <string name="error_email">Email inserita non valida.</string>
    <string name="error_password">Password inserita non valida.</string>
    <string name="error_password_min">La Password deve essere di almeno 6 caratteri.</string>

    <!--Profile-->
    <string name="value_your_drinks">I tuoi drink</string>
    <string name="value_no_custom_drinks">Non hai ancora creato nessun drink…\nCosa aspetti?</string>
    <string name="value_no_custom_drinks_placeholder">placeholder</string>
    <string name="image_description_create_custom_drink">Aggiungi un tuo drink</string>

    <!--Settings-->
    <string name="settings_category_your_profile">Il tuo profilo</string>
    <string name="settings_image_camera">camera</string>
    <string name="settings_button_change_image">Cambia immagine del profilo</string>
    <string name="settings_image_pencil">modifica</string>
    <string name="settings_button_change_username">Modifica username</string>
    <string name="settings_button_change_password">Modifica password</string>
    <string name="settings_category_info">Informazioni</string>
    <string name="settings_image_about">about us</string>
    <string name="settings_button_about">About Let\'s Drink</string>
    <string name="settings_image_privacy">lock</string>
    <string name="settings_button_privacy">Privacy</string>
    <string name="settings_image_version">versione</string>
    <string name="settings_text_version">Versione</string>
    <string name="settings_text_version_number">1.0.0</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_image_logout">esci</string>
    <string name="settings_button_logout">Logout</string>
    <string name="settings_image_delete">elimina</string>
    <string name="settings_button_delete">Elimina account</string>

    <!--Custom Drinks-->
    <string name="value_custom_drink_name">Nome Drink</string>
    <string name="image_description_add_custom_drink_image">Aggiungi una foto</string>
    <string name="image_description_custom_drink">Foto del drink</string>
    <string name="value_custom_drink_ingredients">Inserisci gli ingredienti</string>
    <string name="image_description_custom_drink_add_ingredient">Aggiungi ingrediente</string>
    <string name="value_custom_drink_ingredient_add">Ingrediente…</string>
    <string name="image_description_custom_drink_delete_ingredient">Togli ingrediente</string>
    <string name="value_custom_drink_method">Inserisci il procedimento…</string>
    <string name="image_description_custom_drink_done">Finito il drink</string>

    <!--Material Alert Dialog-->
    <string name="button_confirm">Conferma</string>
    <string name="button_exit">Esci</string>
    <string name="button_ok">OK</string>
    <string name="button_dismiss">Annulla</string>
    <string name="title_reset_password">Reset Password?</string>
    <string name="message_reset_password">Inserisci la tua Email per ricevere il link di reset.</string>
    <string name="title_delete_custom_drink">Eliminare il drink?</string>
    <string name="message_delete_custom_drink">Sei sicuro di voler eliminare il tuo drink?\nÈ un\'azione irreversibile.</string>
    <string name="title_change_username">Modifica Username</string>
    <string name="title_change_password">Modifica Password</string>
    <string name="title_about">About Let\'s Drink!</string>
    <string name="message_about">L\'applicazione mostra dei cocktail presenti su un database. L\'utente loggato puó creare dei cocktail personalizzati.</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="message_privacy">Informazioni sulla raccolta e diffusione dei dati.</string>
    <string name="title_logout">Effettuare il Logout</string>
    <string name="message_logout">Sei sicuro di voler effettuare il logout?</string>
    <string name="title_delete_account">Elimina Account</string>
    <string name="message_delete_account">Sei sicuro di voler eliminare il tuo account?</string>
    <string name="title_add_fav_not_logged">Errore</string>
    <string name="message_add_fav_not_logged">Devi prima effettuare l\'accesso!</string>

    <!--Toast-->
    <string name="toast_error_empty">Errore! Inserire il valore richiesto!</string>
    <string name="toast_changed_password">Password cambiata.</string>
    <string name="toast_NOT_changed_password">Errore, password NON cambiata.\nRiprova.</string>
    <string name="toast_changed_user_image">Immagine caricata.</string>
    <string name="toast_NOT_changed_user_image">Errore, immagine NON caricata.\nRiprova.</string>
    <string name="toast_used_email">Email già in uso!</string>
    <string name="toast_reset_password">Email inviata.</string>
    <string name="toast_NOT_reset_password">Errore, email non inviata.</string>
    <string name="toast_sign_up_with_google">Accesso con Google effettuato.</string>
    <string name="toast_NOT_sign_up_with_google">Accesso con Google fallito.</string>
    <string name="toast_google_failed_auth">Autenticazione fallita.</string>
    <string name="toast_insert_all_data">Inserisci tutti i campi richiesti.</string>

</resources>