<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_drinks">

    <fragment
        android:id="@+id/navigation_drinks"
        android:name="it.unimib.letsdrink.ui.drinks.drinks_without_login.CocktailsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cocktails">
        <action
            android:id="@+id/action_navigation_drinks_to_cocktailDetailFragment"
            app:destination="@id/cocktailDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="it.unimib.letsdrink.ui.drinks.drinks_without_login.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_navigation_categories_to_cocktailsCategoryFragment"
            app:destination="@id/cocktailsCategoryFragment">
            <argument
                android:name="name"
                app:argType="string" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_shaker"
        android:name="it.unimib.letsdrink.ui.shaker.ShakerFragment"
        android:label="@string/title_shaker"
        tools:layout="@layout/fragment_shaker" >
        <action
            android:id="@+id/action_navigation_shaker_to_cocktailDetailFragment2"
            app:destination="@id/cocktailDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="it.unimib.letsdrink.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="it.unimib.letsdrink.ui.profile.LoginFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_profile_to_registrationFragment"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/cocktailDetailFragment"
        android:name="it.unimib.letsdrink.ui.drinks.drinks_without_login.CocktailDetailFragment"
        android:label="CocktailDetailFragment" />
    <fragment
        android:id="@+id/cocktailsCategoryFragment"
        android:name="it.unimib.letsdrink.ui.drinks.drinks_without_login.CocktailsCategoryFragment"
        android:label="CocktailsCategoryFragment" >
        <action
            android:id="@+id/action_cocktailsCategoryFragment_to_cocktailDetailFragment"
            app:destination="@id/cocktailDetailFragment" />
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="it.unimib.letsdrink.ui.profile.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>


</navigation>