<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView_custom_drink_detail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_custom_drink_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background_black">

        <ImageView
            android:id="@+id/cocktail_custom_drink_detail_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/value_description_image"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cocktail_custom_drink_detail_ingredients_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/value_ingredients"
            android:textColor="@color/lipstick_fuchsia"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cocktail_custom_drink_detail_image"
            app:layout_constraintStart_toStartOf="@id/cocktail_custom_drink_detail_image"
            app:layout_constraintTop_toBottomOf="@id/cocktail_custom_drink_detail_image" />

        <TextView
            android:id="@+id/cocktail_custom_drink_detail_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/cocktail_custom_drink_detail_ingredients_title"
            app:layout_constraintStart_toStartOf="@id/cocktail_custom_drink_detail_ingredients_title"
            app:layout_constraintTop_toBottomOf="@id/cocktail_custom_drink_detail_ingredients_title" />

        <TextView
            android:id="@+id/cocktail_custom_drink_detail_method_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/lipstick_fuchsia"
            android:textSize="20sp"
            android:text="@string/value_method"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cocktail_custom_drink_detail_ingredients"
            app:layout_constraintStart_toStartOf="@id/cocktail_custom_drink_detail_ingredients"
            app:layout_constraintEnd_toEndOf="@id/cocktail_custom_drink_detail_ingredients" />

        <TextView
            android:id="@+id/cocktail_custom_drink_detail_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:paddingBottom="30dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/cocktail_custom_drink_detail_method_title"
            app:layout_constraintStart_toStartOf="@id/cocktail_custom_drink_detail_method_title"
            app:layout_constraintTop_toBottomOf="@id/cocktail_custom_drink_detail_method_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>